Closed Bug 1335025 Opened 7 years ago Closed 7 years ago

Async function expression's source notation have parens in wrong position

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: arai, Assigned: arai)

Details

Attachments

(1 file)

code:
  (async function f() {}).toSource()

actual result:
  async (function f() {})

expected result:
  (async function f() {})
swapped the position of "(" and "async ".
this doesn't affect toString, since toString doesn't have "(".
Attachment #8831689 - Flags: review?(till)
Comment on attachment 8831689 [details] [diff] [review]
Fix source notation of async function expression.

Review of attachment 8831689 [details] [diff] [review]:
-----------------------------------------------------------------

Uh, yes, good catch.
Attachment #8831689 - Flags: review?(till) → review+
https://hg.mozilla.org/mozilla-central/rev/e717a96e766d
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: