Bug 1335025 - Fix source notation of async function expression. r=till